--- a/MiniPaint/MiniPaint.vcxproj
+++ b/MiniPaint/MiniPaint.vcxproj
@@ -78,13 +78,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="KWnd.cpp" />
     <ClCompile Include="MiniPaint.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="MiniPaint.rc" />
+    <ClInclude Include="KWnd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
