--- a/MiniPaint/MiniPaint.vcxproj
+++ b/MiniPaint/MiniPaint.vcxproj
@@ -83,6 +83,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KWnd.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MiniPaint.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
